resultado final do exercicio 2

--- a/fundamentos/secao-02-introducao-a-html-e-css/dia-03-html-e-css-seletores-e-posicionamento/dia-03-html-e-css-seletores-e-posicionamento/style2.css
+++ b/fundamentos/secao-02-introducao-a-html-e-css/dia-03-html-e-css-seletores-e-posicionamento/dia-03-html-e-css-seletores-e-posicionamento/style2.css
@@ -2,13 +2,14 @@
     width: 200px;
     position: absolute;
     left: 100px;
+    top: 100px;
 }
   
   .goomba {
     width: 100px;
     position: absolute;
-    margin-top: 300px;
-    margin-left: 150px;
+    top: 400px;
+    left: 150px;
   }
   
   .baloon {
