--- a/fundamentos/secao-02-introducao-a-html-e-css/dia-03-html-e-css-seletores-e-posicionamento/agrupamento-de-seletores-e-pseudoclasses/style2.css
+++ b/fundamentos/secao-02-introducao-a-html-e-css/dia-03-html-e-css-seletores-e-posicionamento/agrupamento-de-seletores-e-pseudoclasses/style2.css
@@ -1,11 +1,24 @@
 /* Estilize as divs para que, ao passar o cursor por cima das mesmas, elas ganhem uma borda. */
 div:hover{
-    border: 2px solid palevioletred;
+    border: 7px solid rgb(255, 173, 182);
 }
 
 /* Faça cada div ter uma cor de fundo própria. */
-
-
+div:nth-of-type(1){
+    background-color: red;
+}
+div:nth-of-type(2){
+    background-color: blue;
+}
+div:nth-of-type(3){
+    background-color: green;
+}
+div:nth-of-type(4){
+    background-color: purple;
+}
+div:nth-of-type(5){
+    background-color:blanchedalmond;
+}
 /* Estilize cada uma das tags h3 da maneira que achar melhor (cor, tamanho, estilo e família). */
 
 /* Faça a terceira div ser maior que as demais. */
