--- a/fundamentos/secao-02-introducao-a-html-e-css/dia-03-html-e-css-seletores-e-posicionamento/agrupamento-de-seletores-e-pseudoclasses/style2.css
+++ b/fundamentos/secao-02-introducao-a-html-e-css/dia-03-html-e-css-seletores-e-posicionamento/agrupamento-de-seletores-e-pseudoclasses/style2.css
@@ -20,6 +20,21 @@ div:nth-of-type(5){
     background-color:blanchedalmond;
 }
 /* Estilize cada uma das tags h3 da maneira que achar melhor (cor, tamanho, estilo e família). */
+div:nth-of-type(1) > h3{
+    font-size: 15px;
+}
+div:nth-of-type(2) > h3{
+    color: white;
+}
+div:nth-of-type(3) > h3{
+    text-align: center;
+}
+div:nth-of-type(4) > h3{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+div:nth-of-type(5) > h3{
+    text-decoration: line-through;
+}
 
 /* Faça a terceira div ser maior que as demais. */
 
