--- a/fundamentos/secao-02-introducao-a-html-e-css/dia-03-html-e-css-seletores-e-posicionamento/agrupamento-de-seletores-e-pseudoclasses/style2.css
+++ b/fundamentos/secao-02-introducao-a-html-e-css/dia-03-html-e-css-seletores-e-posicionamento/agrupamento-de-seletores-e-pseudoclasses/style2.css
@@ -7,18 +7,23 @@ div:hover{
 div:nth-of-type(1){
     background-color: red;
 }
+
 div:nth-of-type(2){
     background-color: blue;
 }
+
 div:nth-of-type(3){
     background-color: green;
 }
+
 div:nth-of-type(4){
     background-color: purple;
 }
+
 div:nth-of-type(5){
     background-color:blanchedalmond;
 }
+
 /* Estilize cada uma das tags h3 da maneira que achar melhor (cor, tamanho, estilo e família). */
 div:nth-of-type(1) > h3{
     font-size: 15px;
@@ -37,6 +42,11 @@ div:nth-of-type(5) > h3{
 }
 
 /* Faça a terceira div ser maior que as demais. */
-
+div:nth-of-type(3) {
+    height: 400px;
+}
 
 /* Deixe as tags ímpares h3 com o texto em itálico. */
+div:nth-of-type(odd) h3 {
+    font-style: italic;
+}
