exercicio finalizado apos mentoria

--- a/fundamentos/secao-02-introducao-a-html-e-css/dia-03-html-e-css-seletores-e-posicionamento/dia-03-html-e-css-seletores-e-posicionamento/style.css
+++ b/fundamentos/secao-02-introducao-a-html-e-css/dia-03-html-e-css-seletores-e-posicionamento/dia-03-html-e-css-seletores-e-posicionamento/style.css
@@ -25,3 +25,9 @@
   .border {
     border: 5px solid black;
   }
+
+  /* Com a mentoria do Cadu para ajustar a box A e B que estavam separadas*/
+
+.caixa-a, .caixa-b {
+  margin: -2px;
+}
