--- a/fundamentos/secao-02-introducao-a-html-e-css/combinacoes-e-classes-descendentes/style.css
+++ b/fundamentos/secao-02-introducao-a-html-e-css/combinacoes-e-classes-descendentes/style.css
@@ -12,3 +12,12 @@ ol li:nth-of-type(even) {
 ol li:nth-of-type(odd) {
     text-transform: uppercase;
 }
+
+/* Faça todas as tags Header (h1, h2…) possuírem cor de fonte vermelha e, se alguma delas estiver em itálico, aumente seu tamanho para 40px e acrescente uma borda de 1px preta e sólida. */
+h1, h3 {
+    color: red;
+}
+h1 em{
+    font-size: 40px;
+    border: 1px solid black;
+}
