--- a/fundamentos/secao-02-introducao-a-html-e-css/combinacoes-e-classes-descendentes/style.css
+++ b/fundamentos/secao-02-introducao-a-html-e-css/combinacoes-e-classes-descendentes/style.css
@@ -21,3 +21,13 @@ h1 em{
     font-size: 40px;
     border: 1px solid black;
 }
+
+/* Faça todas as li’s terem 20px de tamanho de fonte e, para todo texto em itálico dentro de alguma li, utilize a propriedade font-weight para deixá-lo negrito. */
+
+li {
+    font-size: 20px;
+}
+
+li em {
+    font-weight: 700;
+}
