--- a/fundamentos/secao-02-introducao-a-html-e-css/combinacoes-e-classes-descendentes/style.css
+++ b/fundamentos/secao-02-introducao-a-html-e-css/combinacoes-e-classes-descendentes/style.css
@@ -23,7 +23,6 @@ h1 em{
 }
 
 /* Faça todas as li’s terem 20px de tamanho de fonte e, para todo texto em itálico dentro de alguma li, utilize a propriedade font-weight para deixá-lo negrito. */
-
 li {
     font-size: 20px;
 }
@@ -31,3 +30,20 @@ li {
 li em {
     font-weight: 700;
 }
+
+/* Na listagem de linguagens de programação, faça com que as 3 primeiras da lista possuam cor de fonte azul e, se alguma possuir “java*” no texto, utilize uma cor de fundo rosa. */
+ul.languages li:nth-of-type(1){
+    color: blue;
+}
+
+ul.languages li:nth-child(2){
+    color: blue;
+    background-color: pink;
+}
+
+ul.languages li:nth-of-type(3){
+    color: blue;
+    background-color: pink;
+}
+
+
