--- a/fundamentos/secao-02-introducao-a-html-e-css/dia-04-html-semantico/elementos-de-bloco-e-elementos-inline/style.css
+++ b/fundamentos/secao-02-introducao-a-html-e-css/dia-04-html-semantico/elementos-de-bloco-e-elementos-inline/style.css
@@ -3,13 +3,12 @@ h1 {
   }
 
 ul {
-    display: inline-block;
     text-align: center;
     list-style: none;
 }
 
-
 .first {
+    display: block;
     background-color: rgb(235, 200, 84);
     font-size: 20px;
     height: 50px;
@@ -18,6 +17,7 @@ ul {
   }
 
 .second {
+    display: inline-block;
     background-color: rgb(219, 219, 219);
     font-size: 20px;
     height: 50px;
@@ -26,6 +26,7 @@ ul {
   }
 
 .third {
+    display: inline-block;
     background-color: rgb(170, 142, 106);
     font-size: 20px;
     height: 50px;
@@ -40,3 +41,7 @@ ul {
   section {
     text-align: center;
   }
+
+li {
+    display: inline;
+}
