--- a/fundamentos/secao-02-introducao-a-html-e-css/dia-04-html-semantico/elementos-de-bloco-e-elementos-inline/style.css
+++ b/fundamentos/secao-02-introducao-a-html-e-css/dia-04-html-semantico/elementos-de-bloco-e-elementos-inline/style.css
@@ -15,7 +15,8 @@ ul {
     text-align: center;
     width: 200px;
 
-    margin: 0 590px;
+    margin-left: auto;
+    margin-right: auto;
   }
 
 .second {
